# ingest-wikimedia

./: .gitignore  .pre-commit-config.yaml  README  README.md  ROADMAP.md  Vagrantfile  common.py  constants.py  download-entry.py  downloader.py  dpla-id-banlist.txt  dpla.py  findcfg.sh  local.py  logs.py  main.py  metadata.py  pyproject.toml  requirements.txt  rights.json  run.py  s3.py  sdc-sync.py  setup.cfg  temp.py  test_uploader.py  tracker.py  upload-entry.py  upload.py  uploader.py  web.py  wikimedia.py
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: cim-pageviews.yml  codeql.yml  dpla-dup-window.yml  flake8.yml  lint.yml  pytest.yml  ruff.yml  wikimedia-kill.yml  wikimedia-launch.yml  wikimedia-retry.yml  wikimedia-upload-status.yml
_includes/: head-custom.html
docs/: architecture.md  maintenance-tools.md  metrics.md  operations.md  pipeline-phases.md  sdc-sync.md  sidecars.md  slack-guide.md  special-cases.md  templates.md  upload-invariant.md
duploader/: dupload.py  utils.py
ingest_wikimedia/: await_target_free_sidecar.py  banlist.py  categories.py  common.py  csrf.py  dpla.py  drain_sidecar.py  dup_throttle.py  es.py  hand_fix_sidecar.py  iiif.py  legacy_artwork.py  local.py  localfs.py  logs.py  maintain.py  metadata.py  partners.py  s3.py  sdc.py  session_state.py  sha1_lock.py  slack.py  ssm.py  staging.py  tools_context.py  tracker.py  web.py  wikimedia.py  wikitext_normalize.py  worker_slots.py
lambda/wikimedia-slack-dispatch/: handler.py
metrics/: commons_category_allow_list.tsv  index.html  metrics.js  styles.css
metrics/cim-pageviews/: .gitignore  CIMviews.py  user-config.py
metrics/dpla-dup-window/: .gitignore  release_window.py
metrics/dpla-dup-window/wiki/: Template_DPLA_duplicate.wiki  (+3 more)
readiness/: README.md  big_sky_country_digital_network_inventory.md  california_digital_library_inventory.md  digital_commonwealth_inventory.md  digital_library_of_georgia_inventory.md  digital_library_of_tennessee_inventory.md  digital_maryland_inventory.md  digital_virginias_inventory.md  empire_state_digital_network_inventory.md  heartland_hub_inventory.md  heartland_inventory.md  heartland_inventory_domains.md  illinois_digital_heritage_hub_inventory.md  indiana_inventory.md  indiana_inventory_domains.md  indiana_memory_inventory.md  internet_archive_inventory.md  inventory.py  michigan_service_hub_inventory.md  minnesota_digital_library_inventory.md  mountain_west_digital_library_inventory.md  nj_de_digital_collective_inventory.md  north_carolina_digital_heritage_center_inventory.md  northwest_digital_heritage_inventory.md  ohio_digital_network_inventory.md  okhub_inventory.md  orbis_cascade_alliance_inventory.md  pa_digital_inventory.md  plains_to_peaks_collective_inventory.md  recollection_wisconsin_inventory.md  smithsonian_institution_inventory.md  south_carolina_digital_library_inventory.md  sunshine_state_digital_network_inventory.md  texas_digital_library_inventory.md  vermont_green_mountain_digital_archive_inventory.md
scripts/: wikimedia_kill.py  wikimedia_launch.py  wikimedia_retry.py  wikimedia_upload_status.py
tests/: conftest.py  test_await_target_free_sidecar.py  test_categories.py  test_common.py  test_csrf.py  test_downloader.py  test_dpla.py  test_drain_deferred.py  test_drain_sidecar.py  test_dup_throttle.py  test_get_ids_es.py  test_get_ids_nara.py  test_get_ids_retry.py  test_iiif.py  test_lambda_handler.py  test_legacy_artwork.py  test_local.py  test_logs.py  test_maintain.py  test_metadata.py  test_partners.py  test_regen_institutions.py  test_release_window.py  test_resolve_dpla_ids.py  test_s3.py  test_sdc.py  test_sdc_sync.py  test_sha1_lock.py  test_slack.py  test_ssm.py  test_tracker.py  test_upload_invariant.py  test_uploader.py  test_web.py  test_wikimedia.py  test_wikimedia_kill.py  test_wikimedia_launch.py  test_wikimedia_retry.py  test_wikimedia_upload_status.py  test_wikitext_normalize.py  (+1 more)
tools/: downloader.py  drain_deferred.py  fix_unknown_categories.py  get_ids_api.py  get_ids_es.py  get_ids_nara.py  get_ids_retry.py  get_incomplete_items.py  nara_ids.py  nuke.py  nuke_items.py  regen_institutions.py  remimer.py  rescue_preserved_metadata.py  resolve_dpla_ids.py  retirer.py  sdc-sync.py  sdc_sync.py  sign.py  uploader.py  verify_item.py
wikimedia/: download-entry.py  run-download.py  run-upload.py  run.py  upload-entry.py
wikimedia/entries/: download.py  entry.py  upload.py
wikimedia/executors/: downloader.py  executor.py  uploader.py
wikimedia/templates/: download.mjml  upload.mjml
wikimedia/trackers/: tracker.py
wikimedia/utilities/: arguements.py  emailer.py  exceptions.py  format.py  fs.py  helpers.py  iiif.py  logger.py  tracker.py
wikiutils/: downloader.py  emailer.py  exceptions.py  logger.py  uploader.py  utils.py
