[project]
name = "ingest-wikimedia"
version = "0.2.0"
description = "Uploading media from DPLA to Wikimedia Commons"
authors = [
    { name = "Scott Williams", email = "scott@dp.la" },
    { name = "Michael Della Bitta", email = "michael@dp.la" },
    { name = "Dominic Byrd-McDevitt", email = "dominic@dp.la" },
]
license = { text = "MIT License" }
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "boto3-stubs[essential]>=1.35.49",
    "boto3>=1.35.49",
    "certifi>=2024.8.30",
    "click>=8.1.7",
    "pip-system-certs>=4.0",
    "python-magic>=0.4.27",
    "pywikibot>=9.4.1",
    "requests>=2.32.3",
    "tqdm>=4.67.0",
    "validators>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "types-requests>=2.32.0.20241016",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uploader = "tools.uploader:main"
downloader = "tools.downloader:main"
sign = "tools.sign:main"
nuke = "tools.nuke:main"

