[project]
name = "ingest-wikimedia"
version = "0.2.0"
description = "Uploading media from DPLA to Wikimedia Commons"
authors = [
    { name = "Scott Williams", email = "scott@dp.la" },
    { name = "Michael Della Bitta", email = "michael@dp.la" },
    { name = "Dominic Byrd-McDevitt", email = "dominic@dp.la" },
]
license = { text = "MIT License" }
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3-stubs[essential]>=1.43.44",
    "boto3>=1.43.44",
    "certifi>=2026.6.17",
    "click>=8.4.2",
    "mwparserfromhell>=0.7.2",
    "pip-system-certs>=5.3",
    "python-magic>=0.4.27",
    "pywikibot>=11.4.2",
    "requests>=2.34.2",
    "tqdm>=4.68.4",
    "validators>=0.35.0",
    "types-boto3-s3>=1.43.31",
]

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "types-requests>=2.33.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uploader = "tools.uploader:main"
downloader = "tools.downloader:main"
retirer = "tools.retirer:main"
sign = "tools.sign:main"
nuke = "tools.nuke:main"
get-ids-api = "tools.get_ids_api:main"
get-ids-es = "tools.get_ids_es:main"
get-incomplete-items = "tools.get_incomplete_items:main"
nara-ids = "tools.nara_ids:main"
get-ids-nara = "tools.get_ids_nara:main"
resolve-dpla-ids = "tools.resolve_dpla_ids:main"
fix-unknown-categories = "tools.fix_unknown_categories:main"
get-ids-retry = "tools.get_ids_retry:main"
sdc-sync = "tools.sdc_sync:main"
drain-deferred = "tools.drain_deferred:main"

