[project]
name = "ingest-wikimedia"
version = "0.2.0"
description = "Uploading media from DPLA to Wikimedia Commons"
authors = [
    { name = "Scott Williams", email = "scott@dp.la" },
    { name = "Michael Della Bitta", email = "michael@dp.la" },
    { name = "Dominic Byrd-McDevitt", email = "dominic@dp.la" },
]
license = { text = "MIT License" }
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3-stubs[essential]>=1.43.55",
    "boto3>=1.43.55",
    "certifi>=2026.7.22",
    "click>=8.4.2",
    "mwparserfromhell>=0.7.2",
    "pip-system-certs>=5.3",
    "python-magic>=0.4.27",
    "pywikibot>=11.6.0",
    "requests>=2.34.2",
    "tqdm>=4.69.1",
    "validators>=0.35.0",
    "types-boto3-s3>=1.43.50",
]

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    # Capped below 0.16: its default ruleset (LOG015 "use own logger", BLE001,
    # stricter isort) clashes with this repo's intentional root-logger + broad
    # per-item-except conventions and would churn ~40 files for no benefit. The
    # ruff CI action resolves this constraint (it ignores uv.lock), so the cap
    # is what actually pins CI. Bump deliberately if 0.16 is ever adopted.
    "ruff>=0.15.22,<0.16",
    "types-requests>=2.33.0.20260712",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uploader = "tools.uploader:main"
downloader = "tools.downloader:main"
retirer = "tools.retirer:main"
sign = "tools.sign:main"
nuke = "tools.nuke:main"
get-ids-api = "tools.get_ids_api:main"
get-ids-es = "tools.get_ids_es:main"
get-incomplete-items = "tools.get_incomplete_items:main"
nara-ids = "tools.nara_ids:main"
get-ids-nara = "tools.get_ids_nara:main"
resolve-dpla-ids = "tools.resolve_dpla_ids:main"
fix-unknown-categories = "tools.fix_unknown_categories:main"
get-ids-retry = "tools.get_ids_retry:main"
sdc-sync = "tools.sdc_sync:main"

